# demonstracao_ffi

./: README.md
ffi/go-to-dart/pointer/: .gitignore  pubspec.yaml
ffi/go-to-dart/pointer/golang/: main.go
ffi/rust-to-node-with-neon/read_files/: Cargo.toml  caller.js  package.json
ffi/rust-to-node-with-neon/read_files/src/: lib.rs
ipc/ipc-rust-to-node/: Cargo.toml  server.js  start.sh
ipc/ipc-rust-to-node/src/: main.rs
